--- a/src/Main/Analyzer/Binarizator/binarizatorsettingsform.ui
+++ b/src/Main/Analyzer/Binarizator/binarizatorsettingsform.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>176</width>
-    <height>221</height>
+    <width>185</width>
+    <height>529</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -30,17 +30,34 @@
     <widget class="QWidget" name="widgetFilterType" native="true">
      <layout class="QVBoxLayout" name="verticalLayout_2">
       <item>
-       <widget class="QComboBox" name="comboBoxTypeFilter">
-        <item>
-         <property name="text">
-          <string>Пороговый фильтр</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>Цветной фильтр</string>
-         </property>
-        </item>
+       <widget class="QLabel" name="label_2">
+        <property name="text">
+         <string>Порог бинаризации</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QSpinBox" name="tresholdSpinBox">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="Line" name="line">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="label">
+        <property name="text">
+         <string>Выбор цвета </string>
+        </property>
        </widget>
       </item>
       <item>
@@ -100,17 +117,12 @@
     </widget>
    </item>
    <item>
-    <widget class="Line" name="line">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-    </widget>
-   </item>
-   <item>
     <widget class="QWidget" name="widgetColorSelect" native="true">
      <layout class="QVBoxLayout" name="verticalLayout_3">
       <item>
-       <layout class="QHBoxLayout" name="layoutColorSelector"/>
+       <widget class="ColorSelector" name="colorSelector" native="true">
+        <layout class="QHBoxLayout" name="layoutColorSelector"/>
+       </widget>
       </item>
       <item>
        <widget class="QWidget" name="widgetColorFormat" native="true">
@@ -134,18 +146,17 @@
           <number>0</number>
          </property>
          <item>
-          <widget class="QComboBox" name="comboBoxColorFormat">
-           <item>
-            <property name="text">
-             <string>RGB</string>
-            </property>
-           </item>
-           <item>
-            <property name="text">
-             <string>HSV</string>
-            </property>
-           </item>
-          </widget>
+          <spacer name="horizontalSpacer">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>40</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
          </item>
          <item>
           <widget class="QPushButton" name="pushButtonColorSelecting">
@@ -155,6 +166,86 @@
           </widget>
          </item>
         </layout>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+   </item>
+   <item>
+    <widget class="Line" name="line_2">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QWidget" name="widget" native="true">
+     <layout class="QGridLayout" name="gridLayout">
+      <item row="1" column="3">
+       <widget class="QSpinBox" name="hueRightMarginSpinBox"/>
+      </item>
+      <item row="3" column="1">
+       <widget class="QSpinBox" name="valueLeftMarginSpinBox"/>
+      </item>
+      <item row="2" column="3">
+       <widget class="QSpinBox" name="saturationRightMarginSpinBox"/>
+      </item>
+      <item row="3" column="3">
+       <widget class="QSpinBox" name="valueRightMarginSpinBox"/>
+      </item>
+      <item row="2" column="1">
+       <widget class="QSpinBox" name="saturationLeftMarginSpinBox"/>
+      </item>
+      <item row="2" column="0">
+       <widget class="QLabel" name="label_7">
+        <property name="text">
+         <string>Насыщенность</string>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="0">
+       <widget class="QLabel" name="label_8">
+        <property name="text">
+         <string>Яркость</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="0">
+       <widget class="QLabel" name="label_6">
+        <property name="text">
+         <string>Цвет:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="1">
+       <widget class="QSpinBox" name="hueLeftMarginSpinBox"/>
+      </item>
+      <item row="0" column="0" colspan="4">
+       <widget class="QLabel" name="label_3">
+        <property name="text">
+         <string>Допуски:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="2">
+       <widget class="QLabel" name="label_4">
+        <property name="text">
+         <string>—</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="2">
+       <widget class="QLabel" name="label_5">
+        <property name="text">
+         <string>—</string>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="2">
+       <widget class="QLabel" name="label_9">
+        <property name="text">
+         <string>—</string>
+        </property>
        </widget>
       </item>
      </layout>
@@ -175,6 +266,14 @@
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>ColorSelector</class>
+   <extends>QWidget</extends>
+   <header>colorselector.h</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
